--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     text-align: center;
+    font-family: 'Philosopher', sans-serif;
     background-color: #E9DAEE;
     margin: 0;
     padding: 0;
@@ -15,13 +16,13 @@ body {
 
 h1 {
     font-family: 'Anton', sans-serif;
-    font-size: 120px;
+    font-size: 140px;
     background-image: url(https://images.unsplash.com/photo-1602294525148-c3d202338aa3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 0.25px;
     -webkit-text-stroke-color: #E9DAEE;
-    margin-top: 0%;
+    margin-top: -25px;
 }
 
 .me {
@@ -29,5 +30,18 @@ h1 {
     width: 380px;
     border-radius: 50%;
     border: 5px solid #E9DAEE;
-    margin-top: -90px;
+    margin-top: -115px;
+}
+
+.headings {
+    font-family: 'Twinkle Star', cursive;
+}
+
+h2 {
+    font-size: 45px;
+    margin-top: 0;
+}
+
+p {
+    margin: 40px 80px 40px 80px;
 }
