--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,11 @@ body {
 
 .name {
     background-color: #D2B4DE;
+    background-image: linear-gradient(#A380DF, #E9DAEE);
     display: flex;
     align-content: center;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 0px;
 }
 
 h1 {
@@ -20,7 +21,7 @@ h1 {
     background-image: url(https://images.unsplash.com/photo-1602294525148-c3d202338aa3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 0.25px;
+    -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #E9DAEE;
     margin-top: -25px;
 }
@@ -29,17 +30,26 @@ h1 {
     height: 380px;
     width: 380px;
     border-radius: 50%;
-    border: 5px solid #E9DAEE;
+    border: 6px solid #E9DAEE;
     margin-top: -115px;
 }
 
 .headings {
     font-family: 'Twinkle Star', cursive;
+    color: #A380DF;
 }
 
 h2 {
-    font-size: 45px;
+    font-size: 50px;
     margin-top: 0;
+}
+
+h3 {
+    font-size: 40px;
+}
+
+h4 {
+    font-size: 30px;
 }
 
 p {
