--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,10 @@ h2 {
     cursor: pointer;
     border-bottom: 2px solid #5c9057;
   }
+
+  a:link {
+    color: black;
+  }
   
   /* Handle Classes with JQuery */
 .open {
